# mai_os_labs

lab2/: CMakeLists.txt  main.cpp  programm_logs.txt
lab2/include/: search_patterns.hpp
lab2/src/: search_patterns.cpp
lab2/test/: tests.cpp
labb1/: CMakeLists.txt  main.cpp
labb1/include/: parent.hpp  utils.hpp
labb1/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
labb1/test/: test.cpp
